# QCOS_Dash

./: .gitignore  App.tsx  App.tsx.txt  CMakeLists.txt  README.md  create_and_deploy.ps1  create_and_deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: hf_sync.yml
ai_core/cpp/: CMakeLists.txt  qcos_inference.cpp  qcos_inference_stub.cpp
ai_core/models/: clnn_qnn.py  instinct_v1.jit  ipsnn_qnn.py  os_kernel_net.py  qnn_layer.py
ai_core/scripts/: serialize_model.py
ai_core/system/: iai_system.py  (+1 more)
components/: AICommandConsole.tsx  AgentQ.tsx  AgentQCore.tsx  AgentQEnhancedInsights.tsx  AgentQMasteryInterface.tsx  AgentQSelfTrainingEvolution.tsx  AnimatedBackground.tsx  AnomalyLog.tsx  ApplicationChips.tsx  ApplicationHub.tsx  CHIPSAppStore.tsx  CHIPSBackOffice.tsx  CHIPSBrowser.tsx  CollapsibleSection.tsx  CommandCenter.tsx  CubeFace.tsx  CubeNavigator.tsx  DecoherenceDriftMonitor.tsx  DeployAppModal.tsx  DeploymentSequence.tsx  FaceToggleSwitch.tsx  FullScreenSwitcher.tsx  GlassPanel.tsx  GlobalAbundanceEngine.tsx  GlobalConfig.tsx  GlobalSwineForesight.tsx  HistoricalTrendsChart.tsx  HolographicContainer.tsx  HolographicCube.tsx  HolographicTesseract.tsx  IAIIPSInterface.tsx  IAIKernelStatus.tsx  IAITrainingSimulation.tsx  Icons.tsx  KernelScheduler.tsx  MemoryMatrix.tsx  MetaprogrammingInterface.tsx  PlaceholderFace.tsx  PowerMetrics.tsx  PublicDeploymentOptimizationHub.tsx  (+21 more)
hooks/: useAgentQ.ts  useRealtimeData.ts  useVoiceCommands.ts
panels/: QCOSInternalWebBrowserPanel.tsx
utils/: agentUtils.ts  codebase.ts
(+2 files in other folders)
